Module 7 - Ingress/Ingress TLS - Ćwiczenia/ingress-mixed-routing-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mixed-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - mix.127.0.0.1.nip.io
    secretName: tls-localhost
  rules:
  - host: v1.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: hello-app-v1
          servicePort: 8080
  - host: v2.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: hello-app-v2
          servicePort: 8080
  - host: mix.127.0.0.1.nip.io
    http:
      paths:
      - path: /echo/?(.*)
        backend: 
          serviceName: echo-app
          servicePort: 8080
      - path: /dumpster/?(.*)
        backend: 
          serviceName: dumpster-app
          servicePort: 8080
